# Thaqib---Smart-Cheating-Detection-System

./: .dockerignore  .env  .env.example  .env.production.example  .gitignore  AUDIO_ARCHITECTURE.md  CODE_AUDIT.md  CREDENTIALS.md  DEVELOPMENT.md  Dockerfile  Fixing Cheating Detection Recording.md  Graduation Project Documentation.txt  Optimizing Cheating Detection System.md  PROJECT_MANAGEMENT.md  README.md  SRS.md  SYSTEM_ARCHITECTURE.md  SYSTEM_DOCUMENTATION.md  audio code.py  cheat_detector.py  cheat_detector_ml.py  cheat_detector_p.py  cheat_labels.json  cheat_model.pkl  cheat_scaler.pkl  collect.py  collect_samples.py  config.py  deep_analysis.md  demo_db.json  docker-compose.prod.yml  docker-compose.yml  el3fify  grad project.py  implementation_plan.md  inspect_models.py  keywords.json  model_meta.json  package.json  proo.py  (+10 more)
.claude/plan/: invigilator-and-dashboard-fixes.md  multi-tenant-university.md
.cursor/plans/: invigilator_dashboard_plan_7dd82ff4.plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
.specify/extensions/: .registry
ai-code-reviews/: dot_gitignore.review.md  env_example.review.md  frontend_package.json.review.md  frontend_src_App.tsx.review.md  frontend_src_components_CameraModal.tsx.review.md  frontend_src_components_HallsTab.tsx.review.md  frontend_src_components_SetupWizard.tsx.review.md  frontend_src_config_api.ts.review.md  frontend_src_hooks_useInvigilatorPtt.ts.review.md  frontend_src_pages_DashboardPage.tsx.review.md  frontend_src_pages_LoginPage.tsx.review.md  frontend_src_test_LoginPage.test.tsx.review.md  overall-project.review.md  pyproject.toml.review.md  src_thaqib_api_dependencies.py.review.md  src_thaqib_api_routes_auth.py.review.md  src_thaqib_api_routes_devices.py.review.md  src_thaqib_api_routes_events.py.review.md  src_thaqib_api_routes_exams.py.review.md  src_thaqib_api_routes_halls.py.review.md  src_thaqib_api_routes_institutions.py.review.md  src_thaqib_api_routes_setup.py.review.md  src_thaqib_api_routes_stream.py.review.md  src_thaqib_api_routes_users.py.review.md  src_thaqib_api_ws_manager.py.review.md  src_thaqib_config_settings.py.review.md  src_thaqib_core_security.py.review.md  src_thaqib_db_database.py.review.md  src_thaqib_db_models_events.py.review.md  src_thaqib_db_models_exams.py.review.md  src_thaqib_db_models_infrastructure.py.review.md  src_thaqib_db_models_users.py.review.md  src_thaqib_main.py.review.md  src_thaqib_schemas_events.py.review.md  src_thaqib_schemas_exams.py.review.md  src_thaqib_schemas_infrastructure.py.review.md  src_thaqib_schemas_users.py.review.md  src_thaqib_video_detector.py.review.md  src_thaqib_video_tracker.py.review.md  tests_conftest.py.review.md
alembic/: env.py
alembic/versions/: 1942f2a63fe8_make_code_optional.py  20260528_alert_review_lifecycle.py  20260602_hall_voice_channels_and_ptt_clips.py  20260604_remove_ptt.py  20260609_multi_tenant_hierarchy.py  20260609_role_merge_admin_scoping.py  20260616_evidence_retention_policy.py  20260617_rf_device_detection.py  20260620_user_preferences.py  20c538b930fc_initial_schema.py  432c54b8e32d_initial_schema.py  63345f4ffba2_merge_users_image_and_assignment_.py  8b8f5a3b6c21_add_refresh_tokens.py  c3a2ebcd87b1_add_hall_id_and_monitoring_fields_to_.py  ce3587b4e14d_add_halls_image_column.py  f7b1d2a4c9e8_add_users_image_column.py
all front/: package-lock.json
all front/src/: App.js
all front/src/components/: CameraModal.jsx  CaseCard.jsx  HallCard.jsx  Navbar.jsx
all front/src/pages/: Dashboard.css
ana/: src_thaqib_video_camera.py.review.md  src_thaqib_video_cheating_evaluator.py.review.md  src_thaqib_video_pipeline.py.review.md  src_thaqib_video_tools_detector.py.review.md
docs/: AUDIO_ARCHITECTURE.md  SRS.md  SYSTEM_DOCUMENTATION.md  SYSTEM_PERFORMANCE.md  Thaqib_Graduation_Documentation.docx  alert_duration_analysis.md  architecture_analysis.md  av_fusion_dashboard_plan.md  av_sync_analysis.md  build_doc.js  diagrams.js  face_mesh_accuracy_report.md  limits_and_performance.md  performance_analysis.md  production-readiness-audit.md  system_analysis.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: README.md
frontend/e2e/fixtures/: api.ts  browserAuth.ts  env.ts
frontend/e2e/specs/: 00-setup-auth.spec.ts  01-tenant-rbac.spec.ts  02-admin-config.spec.ts  03-exam-stream-lifecycle.spec.ts  04-alert-review-report.spec.ts  05-browser-roles.spec.ts  (+3 more)
frontend/public/: manifest.webmanifest
frontend/src/: App.css  App.tsx  index.css
reports/: report_20260418_151524.json  report_20260429_173035.json  report_20260501_223417.json  report_20260511_194306.json  report_20260511_205428.html  report_20260511_205428.json
scanner_node/: README.md  main.py
scratch/: test_phone_detection.py  test_phone_yolo.py
scripts/: demo_audio.py  demo_video.py  fix_comments.py  fix_email.py  seed_demo.py  test_audio_duration.py  test_mic_pin_overlay.py  test_video_alerts.py  verify_apis.py
simulator/: Dockerfile  README.md  config.yaml  docker-compose.simulator.yml  main.py  requirements.txt
simulator/test_videos/: .gitkeep
specs/001-control-room-escalation/: spec.md
src/: App.js  index.css
src/data/: cases.js  halls.js
src/pages/: Dashboard.jsx
src/tests/: interactive_ptt.py  ptt_client.html  test_ptt.py
src/thaqib/: __init__.py  av_alert_composer.py  main.py  mic_layout.py  sim_clock.py
testing file/: to make a frame  copy.py  to make a frame .py
tests/: conftest.py  test_alert_lifecycle.py  test_audio_stream_source.py  test_auth.py  test_auth_advanced.py  test_evidence_retention.py  test_exams.py  test_infrastructure.py  test_invigilator_feed.py  test_overview.py  test_production_settings.py  test_ptt_channels.py  test_ptt_status.py  test_role_merge.py  test_scoping.py  test_seed_demo.py  test_setup_security.py  test_simulator_config.py  test_stream_composer_attach.py  test_tenant_isolation.py  test_tracker_import.py  test_users.py  test_video_pipeline_startup.py  test_voice_incident.py
(+140 files in other folders)
