[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thaqib"
version = "1.0.0"
description = "Smart Exams Monitoring System - Real-time cheating detection using AI"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Thaqib Team"}
]
keywords = ["exam", "proctoring", "cheating-detection", "computer-vision", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ultralytics>=8.0.0",        # YOLO detection (person + tools)
    "opencv-python>=4.8.0",      # Video capture and rendering
    "numpy>=1.24.0",             # Vectorized spatial math
    "mediapipe>=0.10.30",        # Face landmark extraction (Tasks API)
    "boxmot>=10.0.0",            # BoT-SORT multi-object tracker
    "pydantic>=2.5.0",           # Data validation
    "pydantic-settings>=2.1.0",  # Settings management (.env loading)
    "python-dotenv>=1.0.0",      # Environment variables
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.scripts]
# Run: python scripts/demo_video.py --source 0
# thaqib-demo entry point removed — scripts/ is not an installed package

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
